Fix login form on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -33,7 +33,8 @@ body {
   justify-content: space-between;
 }
 
-button.cactus-button {
+button.cactus-button,
+a.cactus-button {
   background: var(--accent);
   color: var(--background);
   border-radius: 0;
@@ -43,10 +44,15 @@ button.cactus-button {
   font-size: 1rem;
   text-decoration: none;
   text-align: center;
+  width: max-content;
 }
 
 .cactus-editor {
   font-family: "share tech mono", monospace;
+}
+
+.cactus-login-form-wrapper {
+  margin-top: 0.5rem;
 }
 
 .cactus-login-form {
@@ -60,7 +66,7 @@ button.cactus-button {
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .cactus-login-close {
@@ -100,6 +106,11 @@ button.cactus-button {
   gap: 0.5rem;
   display: flex;
   flex-direction: column;
+}
+
+
+.cactus-login-credentials-button {
+  align-self: flex-end;
 }
 
 .cactus-login-field {
